Fix T79373: Forbid painting on linked image.

There is just no reason to support that kind of useless behavior.

Some remote TODO could be to define a process based on liboverride and
layers.